--- a/application/templates/players/list.html
+++ b/application/templates/players/list.html
@@ -17,31 +17,31 @@
     {% for player in players %}
     <tr>
       <td>{{ player.player_tag }}</td>
-      <td>{{ player.role_top }}</td>
+      <td>{{ player.top }}</td>
       <td>
         <form method="POST" action="{{ url_for('players_set_top', player_id=player.id) }}">
            <input type="submit" value="Change top!"/>
         </form>
       </td>
-      <td>{{ player.role_jgl }}</td>
+      <td>{{ player.jgl }}</td>
       <td>
         <form method="POST" action="{{ url_for('players_set_jgl', player_id=player.id) }}">
            <input type="submit" value="Change jgl!"/>
         </form>
       </td>
-      <td>{{ player.role_mid }}</td>
+      <td>{{ player.mid }}</td>
       <td>
          <form method="POST" action="{{ url_for('players_set_mid', player_id=player.id) }}">
            <input type="submit" value="Change mid!"/>
         </form>
       </td>
-      <td>{{ player.role_adc }}</td>
+      <td>{{ player.adc }}</td>
       <td>
          <form method="POST" action="{{ url_for('players_set_adc', player_id=player.id) }}">
            <input type="submit" value="Change adc!"/>
         </form>
       </td>
-      <td>{{ player.role_sup }}</td>
+      <td>{{ player.sup }}</td>
       <td>
          <form method="POST" action="{{ url_for('players_set_sup', player_id=player.id) }}">
            <input type="submit" value="Change sup!"/>
