--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -7,8 +7,8 @@
 
   <body>
     <ul>
-    <li><a href="{{ url_for('players_index') }}">List players</li>
-    <li><a href="{{ url_for('players_form') }}">Add new player</li>
+    <li><a href="{{ url_for('players_index') }}">List players</a></li>
+    <li><a href="{{ url_for('players_form') }}">Add new player</a></li>
     </ul>
     {% block body %}
       <p>
