Lisätty login/logout ja viitteet pelaajien ja käyttäjien välille

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -6,12 +6,21 @@
   </head>
 
   <body>
+    {% if current_user.is_authenticated %}
+    <p>
+      Logged in as {{ current_user.name }}. <a href="{{ url_for('auth_logout') }}">Logout</a>
+    </p>
+    {% else %}
+    <a href="{{ url_for('auth_login') }}">Login</a>
+    {% endif %}
+
     <ul>
     <li><a href="{{ url_for('players_index') }}">List players</a></li>
     <li><a href="{{ url_for('players_form') }}">Add new player</a></li>
     </ul>
     {% block body %}
       <p>
+        Content.
       </p>
     {% endblock %}
   </body>
