--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -15,6 +15,7 @@
     {% endif %}
 
     <ul>
+    <li><a href="{{ url_for('register_form') }}">Register an account</li>
     <li><a href="{{ url_for('players_index') }}">List players</a></li>
     <li><a href="{{ url_for('players_form') }}">Add new player</a></li>
     </ul>
