--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -11,11 +11,10 @@
       Logged in as {{ current_user.name }}. <a href="{{ url_for('auth_logout') }}">Logout</a>
     </p>
     {% else %}
-    <a href="{{ url_for('auth_login') }}">Login</a>
+    <a href="{{ url_for('auth_login') }}">Login</a> Or  <a href="{{ url_for('register_form') }}">Register an account</a>
     {% endif %}
 
     <ul>
-    <li><a href="{{ url_for('register_form') }}">Register an account</li>
     <li><a href="{{ url_for('players_index') }}">List players</a></li>
     <li><a href="{{ url_for('players_form') }}">Add new player</a></li>
     </ul>
