--- a/application/templates/players/list.html
+++ b/application/templates/players/list.html
@@ -2,69 +2,64 @@
 
 {% block body %}
   <h2>Your own players</h2>
+  <h3>Edit your players</h3>
   <table>
+    <tr>
+      <th>Player to edit</th>
+      <th></th>
+      <th>Role to edit</th>
+      <th></th>
+      <th>Choose status</th>
+      <th></th>
+      <th>Change status</th>
+      <th></th>
+      <th>Remove player</th>
+    </tr>
+    <form method="POST" action="{{ url_for('player_edit') }}">
+    <tr>
+      <td> {{form.player}} </td>
+      <th></th>
+      <td> {{ form.role }} </td>
+      <th></th>
+      <td> {{ form.play }} </td>
+      <th></th>
+      <td>
+        <input type="submit" name="btn" value="Change"/>
+      </td>
+      <th></th>
+      <td>
+        <input type="submit" name="btn" value="Remove player"/>
+      </td>
+    </tr>
+    </form>
+    <tr></tr>
     <tr>
       <th>Player tag</th>
       <th></th>
       <th>Top</th>
       <th></th>
-      <th></th>
       <th>Jungle</th>
-      <th></th>
-      <th></th>     
+      <th></th>   
       <th>Middle</th>
-      <th></th>
       <th></th>
       <th>ADC</th>
       <th></th>
-      <th></th>
       <th>Support</th>
-      <th></th>
-      <th></th>
-      <th>Remove player</th>
     </tr>
     {% for player in own_players %}
     <tr>
       <td>{{ player.player_tag }}</td>
-      <th>{{ player.id }}</th>
+      <td></td>
       <td>{{ player.top }}</td>
-      <td>
-        <form method="POST" action="{{ url_for('players_set', player_id=player.id) }}">
-          <input type="submit" name="btn" value="Change top!"/>
-       </form>
-      </td>
-      <th></th>
+      <td></td>
       <td>{{ player.jgl }}</td>
-      <td>
-        <form method="POST" action="{{ url_for('players_set', player_id=player.id) }}">
-           <input type="submit" name="btn" value="Change jgl!"/>
-        </form>
-      </td>
-      <th></th>
+      <td></td>
       <td>{{ player.mid }}</td>
-      <td>
-         <form method="POST" action="{{ url_for('players_set', player_id=player.id) }}">
-           <input type="submit" name="btn" value="Change mid!"/>
-        </form>
-      </td>
-      <th></th>
+      <td></td>
       <td>{{ player.adc }}</td>
-      <td>
-         <form method="POST" action="{{ url_for('players_set', player_id=player.id) }}">
-           <input type="submit" name="btn" value="Change adc!"/>
-        </form>
-      </td>
-      <th></th>
+      <td></td>
       <td>{{ player.sup }}</td>
-      <td>
-        <form method="POST" action="{{ url_for('players_set', player_id=player.id) }}">
-          <input type="submit" name="btn" value="Change sup!"/>
-        </form>
-      </td>
       <th></th>
-      <td>
-        <form method="POST" action="{{ url_for('players_set',player_id=player.id) }}">
-          <input type="submit" name="btn" value="Remove player"/>
     </tr>
     {% endfor %}
 
