--- a/application/templates/teams/list.html
+++ b/application/templates/teams/list.html
@@ -2,7 +2,29 @@
 
 {% block body %}
   <h2>Your own teams</h2>
+  <h3>Edit your team</h3>
   <table>
+    <form method="POST" action="{{ url_for('team_edit') }}">
+    <tr>
+      <td> {{ form.team }}</td>
+      <th></th>
+      <td> {{ form.player }}</td>
+      <th></th>
+      <td> {{ form.role }}</td>
+      <th></th>
+      <td>
+         <input type="submit" name="btn" value="Add player"/>
+       </td>
+       <th></th>
+       <td>
+           <input type="submit" name="btn" value="Remove role"/>
+       </td>
+       <th></th>
+      <td>
+          <input type="submit" name="btn" value="Remove team"/>
+      </td>
+    </tr>
+    </form>
     <tr>
       <th>Team name</th>
       <th></th>
@@ -15,16 +37,6 @@
       <th>ADC player</th>
       <th></th>
       <th>Support player</th>
-      <th></th>
-      <th>Remove team</th>
-      <th></th>
-      <th>Choose player</th>
-      <th></th>
-      <th>Choose role</th>
-      <th></th>
-      <th>Add player</th>
-      <th></th>
-      <th>Remove role</th>
     </tr>
     {% for team in own_teams %}
     <tr>
@@ -40,28 +52,6 @@
       <th></th>
       <td> {{ team.sup }} </td>
       <th></th>
-      <td>
-        <form method="POST" action="{{ url_for('team_edit', team_id = team.id) }}">
-          <input type="submit" name="btn" value="Remove team"/>
-      </td>
-      <th></th>
-      <td>
-          {{ form.player }}
-      </td>
-      <th></th>
-      <td>
-          {{ form.role }}
-      </td>
-      <th></th>
-      <td>
-        <form method="POST" action="{{ url_for('team_edit', team_id = team.id) }}">
-         <input type="submit" name="btn" value="Add player"/>
-       </td>
-       <th></th>
-       <td>
-         <form method="POST" action="{{ url_for('team_edit', team_id = team.id) }}">
-           <input type="submit" name="btn" value="Remove role"/>
-       </td>
     </tr>
     {% endfor %}
   </table>
