--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -32,7 +32,7 @@
           {% if current_user.is_authenticated %}
             <a href="{{ url_for('auth_logout') }}">Hello {{ current_user.name }} -- Logout</a>
           {% else %}
-            <a href="{{ url_for('auth_login') }}">Login</a>
+            <a href="{{ url_for('auth_login') }}">Login</a>    ||    <a href="{{ url_for('register_form') }}">Register</a>
           {% endif %}
         </div>
       </div>
