Lisätty ominaisuus tiimittömien pelaajien lisäämiseen sekä tiimien sekä niiden omistajien listaukseen

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -19,6 +19,9 @@
             <a class="nav-link" href="{{ url_for('players_index') }} ">Player info</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('teamless_players') }} ">Teamless players</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{{ url_for('players_form') }} ">Add player</a>
           </li>
           <li class="nav-item">
@@ -26,6 +29,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('teams_form') }} ">Add team</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('team_owners') }} ">Team owners</a>
           </li>
         </ul>
         <div class="form-inline mt-2 mt-md-0">
