Lisätty käyttäjärooli erottelu ADMIN ja USER, vain ADMIN pääsee näkemään tiimien ja niiden omistajien listauksen

--- a/application/templates/teams/list.html
+++ b/application/templates/teams/list.html
@@ -13,7 +13,7 @@
       <td> {{ form.role }}</td>
       <th></th>
       <td>
-         <input type="submit" name="btn" value="Add player"/>
+         <input type="submit" name="btn" value="Set player"/>
        </td>
        <th></th>
        <td>
