--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block body %}
   <p>
-	Welcome to lol-teambuilder build v0.00.04
+	Welcome to lol-teambuilder build v0.00.07
+	This app was created by Miika Koskela
+	<a href="https://github.com/EgoTastic/tsoha-lolteam">The sourcecode is downloadable from github from account EgoTastic</a>
   </p>
 {% endblock %}
