Vikat parannukset kommentteihin ja dokumentteihin, hauskaa wappua

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -22,13 +22,13 @@
             <a class="nav-link" href="{{ url_for('teamless_players') }} ">Teamless players</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('players_form') }} ">Add player</a>
+            <a class="nav-link" href="{{ url_for('players_form') }} ">Add a player</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('teams_index') }} ">Team info</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('teams_form') }} ">Add team</a>
+            <a class="nav-link" href="{{ url_for('teams_form') }} ">Add a team</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('team_owners') }} ">Team owners</a>
